# teacher-mcp

./: .env.example  .gitignore  .paper_summary_21.md  .paper_summary_22.md  .paper_summary_23.md  .paper_summary_24.md  .paper_summary_90.md  .paper_summary_91.md  .paper_summary_92.md  .paper_summary_93.md  .paper_summary_94.md  .paper_summary_95.md  PAPER_REVIEW_FORMAT.md  PREP_ROLE.md  README.md  mcp.json.example  pyproject.toml
.paper_work/: FY-G4-2026.txt  G4A_textlayer.txt  GATES_EVIDENCE.md  HZQZ-2026.txt  QS7U-00.txt  QS7U-01.txt  QS7U-02.txt  QS7U-03.txt  QS7U-04.txt  QS7U-05.txt  QS7U-06.txt  QS7U-07.txt  QS7U-08.txt  QS7U-09.txt  QS7U-10.txt  QS7U-11.txt  QS7U-12.txt  QS7U-13.txt  QS7U-14.txt  QS7U-16.txt  QS7U-17.txt  QS7U-18.txt  QS7U-19.txt  QS7U-20.txt  QS7U-21.txt  QS7U-22.txt  QS7U-23.txt  QS7U-24.txt  QS7U-25.txt  QS7U-26.txt  QS7U-27.txt  QS7U-28.txt  QS7U-29.txt  QS7U-30.txt  QS7U-31.txt  QS7U-32.txt  QS7U-33.txt  QS7U-34.txt  QS7U-35.txt  QS7U-36.txt  (+55 more)
.paper_work/digests/: 29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  46.txt  47.txt  48.txt  49.txt  50.txt  51.txt  52.txt  53.txt  54.txt  55.txt  56.txt  57.txt  58.txt  59.txt  (+30 more)
app/: config.py  db.py  docconv.py  lectureconv.py  paperparse.py  ruoyi.py  server.py
docs/: 多老师接入与权限.md
pipeline/: README.md  build_ir_from_mapping.py  dump_lecture_nodes.py  dump_raw_nodes.py  fix_image_rows.py  ingest_exercises.py  save_lecture.py  splice_examples.py  validate_parsed.py
reference_207/: build_lesson2_final.py  docx_to_tiptap_faithful.py  faithful_doc_lesson2.json  toc_compare.py  v0_migrate.py
scripts/: c213_gates.py  c213_seed_demo.py  c213_seed_demo_append.py  cleanup_test_data.py  g13_sujunyu.py  prep_flow_e2e.py  smoke_variant.py  spike_h1_fastmcp.py
tests/: gate_data_e2e.py  gate_equiv.py  gate_hygiene.py  gate_lecture_e2e.py  gate_paper_e2e.py  gate_prep_e2e.py  gate_provenance.py  gate_resilience.py  gate_stdio.py  gate_variant_e2e.py  test_bound_openid.py  test_login_as.py  test_role_views.py  test_stemrender.py  test_variant_tools.py
tools/: dbutil.py  ingest_kg.py  ingest_paper.py  label_runner.py  mcp_call.py  omml_to_text.py  ri_batch.py  run_paper.py  smoke_ingest.py  smoke_mcp_client.py  sync_batch.py  sync_ingest.py  sync_label.py
(+47 files in other folders)
