[project]
name = "teacher-mcp"
version = "0.1.0"
description = "PRD-C-1000 RuoYi 平台能力 MCP 适配层（探针）—— 把 RuoYi:8090 现有 HTTP 接口包成 MCP 工具，本地 Claude Code 当编排层。两底座源码零改。"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
