[project]
name = "teacher-mcp"
version = "0.1.0"
description = "PRD-C-1000 RuoYi 平台能力 MCP 适配层（探针）—— 把 RuoYi:8090 现有 HTTP 接口包成 MCP 工具，本地 Claude Code 当编排层。两底座源码零改。"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # 运行期实测已装（早期 uv pip 临时加）：补进清单避免重建 venv 漏装
    "pymysql>=1.1",          # PRD-C-208 3.3-b pymysql 收口（app/db.py）
    "PyMuPDF>=1.24",         # convert_pdf 页转图（import fitz）
    "python-docx>=1.1",      # 讲义忠实转换器（run 颜色/段落样式/单元格底纹，PRD-C-210）
    "dwml>=0.2",             # docx OMML→LaTeX（app/docconv.py）
    "lxml>=5.0",             # docconv XML 解析
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
