[project]
name = "teacher-mcp"
version = "2.0.0"
description = "PRD-O-005 老师系统操作全权代理 MCP：三线三角色(data/prep/variant) + 异构双底座(ruoyi/toolkit) + FastMCP2.x tag 角色视图"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",          # D3 选型：tag 角色过滤 + in-memory Client 测试
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pymysql>=1.1",          # db 收口（挂账：对外开放前 HTTP 化）
    "PyMuPDF>=1.24",         # convert_pdf 页转图
    "python-docx>=1.1",      # 讲义忠实转换器
    "dwml>=0.2",             # OMML→LaTeX
    "lxml>=5.0",
    "matplotlib>=3.8",       # D8 方案A 渲图旁路：题干 markdown+$LaTeX$ → 试卷版式 PNG（mathtext）
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teacher_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "gate_*.py"]  # gate_* = PRD-O-005 回归闸，必须进默认收集
